auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd6d032f",
+   "id": "cbaa0505",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e847215",
+   "id": "110e0938",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cecce31b",
+   "id": "1e85b5f7",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e694966d",
+   "id": "39727fd4",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56067260",
+   "id": "809b69ec",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.3524938,
+  "date": 1713141904.350904,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
