--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c95965a",
+   "id": "6c9b3787",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c43c0a",
+   "id": "4dc56462",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a682b485",
+   "id": "a05479e8",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c60953",
+   "id": "0b55a09d",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83687fff",
+   "id": "225bf7ab",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9755050e",
+   "id": "2c963125",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "769669f4",
+   "id": "e26f7e2a",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117dd7e9",
+   "id": "6cd4c4cf",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad23fbff",
+   "id": "86e87607",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-dab32906-62b2-4c90-ba0a-61c4e66b0ce6'></a>\n",
+    "<a id='equation-e465b187-8fab-4115-bd8f-48bd741fe087'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-96712a7d-1974-411c-b0f2-026efed88dcd'></a>\n",
+    "<a id='equation-d9530536-0c4e-4771-859a-2c0c5e3d2508'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375635d6",
+   "id": "396a309c",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-490acb29-0bd9-4459-935b-5421c226e522'></a>\n",
+    "<a id='equation-6de4df37-c494-4820-8b45-a19d0bd3b41e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-c60ad55e-1bf7-4816-9dec-b582c2c74043'></a>\n",
+    "<a id='equation-e95d5014-1601-43c7-9b88-f35d3c821897'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-104ee702-ff16-438c-9f4a-d75762da2c48'></a>\n",
+    "<a id='equation-3a4cd96c-37a0-4bb8-b340-f1911615d847'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-e1a97433-2947-4bd0-b1bd-4108764d1db2'></a>\n",
+    "<a id='equation-94c6af2a-b55d-40d7-8551-606f5b64c357'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718c8d50",
+   "id": "48cd26aa",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-9434d243-965d-42d9-9693-c15fc12bdadb'></a>\n",
+    "<a id='equation-c8e9046d-e3b8-4d50-8cd9-5ff208ed89eb'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-0bb24f53-9d98-4a11-b217-6f85ae11415f'></a>\n",
+    "<a id='equation-fdd0591a-8e0f-4221-a053-ebfc995bd209'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "047dafb4",
+   "id": "01f33356",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64243f6f",
+   "id": "5d29c1b5",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "655adca4",
+   "id": "e7db93c7",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb1d2a80",
+   "id": "3ded95be",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70ef880",
+   "id": "8217fa03",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4759f68",
+   "id": "bd1e8ab1",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0616a1c8",
+   "id": "22018251",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d831645",
+   "id": "c6d8acc8",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9038d6a5",
+   "id": "bf979661",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7312b2f",
+   "id": "8f453316",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9bec080",
+   "id": "028a5be7",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d2bfa6",
+   "id": "1d8415a8",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48fb778b",
+   "id": "712b71b6",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d009c8ad",
+   "id": "09c070ca",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d192dbda",
+   "id": "0c746966",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a187fd40",
+   "id": "c195755e",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2aafc4",
+   "id": "e4e7be6c",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d70f0d",
+   "id": "45b9c9f5",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9eb6c0e",
+   "id": "cbf8168d",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d37e4bbb",
+   "id": "59c05096",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446f9d87",
+   "id": "0f3c67ce",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8208e863",
+   "id": "0207dbbe",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec4fdd15",
+   "id": "fd7fad9c",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a2497b",
+   "id": "3bb8d453",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd5876c1",
+   "id": "77fd8b46",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7ad840",
+   "id": "dba2fbb9",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d02fa13",
+   "id": "3f7e07c8",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c27e04",
+   "id": "04b0e668",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98cf9cba",
+   "id": "ba4ad7bd",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb957c6",
+   "id": "a2fc0c7d",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb72624",
+   "id": "5642b2e1",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ec1bca",
+   "id": "01ac1139",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139500eb",
+   "id": "14eea2fb",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8fa126",
+   "id": "c4b1d48d",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f54d395",
+   "id": "dbe324fa",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "693f50bb",
+   "id": "d60ad34a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b43b77",
+   "id": "90cdbc64",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b20e0bd1",
+   "id": "f1acde30",
    "metadata": {
     "hide-output": false
    },
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db584f83",
+   "id": "b3f53e30",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2a0c46",
+   "id": "2a0586cd",
    "metadata": {
     "hide-output": false
    },
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cddc38c",
+   "id": "486395d5",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4feb46af",
+   "id": "8f0b7a61",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01bc3583",
+   "id": "f92494b8",
    "metadata": {
     "hide-output": false
    },
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a57065",
+   "id": "611f6b22",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263eb6b2",
+   "id": "7c17c3d0",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5151ce9d",
+   "id": "1b460e6d",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b513ab5",
+   "id": "d1b53e0c",
    "metadata": {
     "hide-output": false
    },
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b09d1a",
+   "id": "b0b57f52",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22fdec3e",
+   "id": "ebc7a952",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f107ca",
+   "id": "b78acbb9",
    "metadata": {
     "hide-output": false
    },
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d70d47e",
+   "id": "e15c4ef7",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44b7025",
+   "id": "67bb29ba",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22ba820",
+   "id": "80d268f2",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27fdfc3c",
+   "id": "cefff62d",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e79d8ebd",
+   "id": "240a24e4",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a591869",
+   "id": "33e2a7f9",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f34c8e",
+   "id": "4eb11e20",
    "metadata": {
     "hide-output": false
    },
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ac66732",
+   "id": "c1a1c368",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176073fc",
+   "id": "e9cdf935",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7a3226",
+   "id": "d039f0f5",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392329d3",
+   "id": "eb946a04",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9afee3d",
+   "id": "38b038ce",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc24990",
+   "id": "3e2c125e",
    "metadata": {
     "hide-output": false
    },
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d219b7f",
+   "id": "552c984f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a5d07f",
+   "id": "f4e4b845",
    "metadata": {
     "hide-output": false
    },
@@ -1388,7 +1388,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.6895077,
+  "date": 1713141904.558591,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
