--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37b8c630",
+   "id": "3b8d1da7",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03287199",
+   "id": "3d8f10b8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ab16c2",
+   "id": "dd437889",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb01d4b9",
+   "id": "8c571067",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec27196",
+   "id": "a3e90682",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3983e52",
+   "id": "01646760",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4df7505d",
+   "id": "453d4eeb",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d51b4350",
+   "id": "b97206df",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f4ebec",
+   "id": "d49a58a9",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9269d7",
+   "id": "ddd33fda",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9335e2ed",
+   "id": "ee03df24",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31190ec4",
+   "id": "4af55b57",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b91b64",
+   "id": "69c3b2df",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a947553",
+   "id": "ea83e46f",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e704de29",
+   "id": "2e41d6ec",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320e6d31",
+   "id": "ec67ecdf",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a12ea6",
+   "id": "351c199e",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c2f089b",
+   "id": "43b4a2b4",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a617e71a",
+   "id": "e456a261",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd7561e0",
+   "id": "092e75f4",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4d9eb65",
+   "id": "39c50579",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ff7726",
+   "id": "26c5f05a",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc9228b",
+   "id": "3f3b4426",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c974ae86",
+   "id": "c2f86489",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3bd5752",
+   "id": "eac16db7",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08df4a41",
+   "id": "e1cbd570",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b65ea58",
+   "id": "866119ea",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45120fd0",
+   "id": "e61c3ba0",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea0e5bf",
+   "id": "8989a015",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c3bad9",
+   "id": "ac825bdb",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95079a4",
+   "id": "c8de2ea9",
    "metadata": {
     "hide-output": false
    },
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d4f0da",
+   "id": "0e59825c",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c3f9ac",
+   "id": "e0e61aed",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f3377b",
+   "id": "7aac85d5",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e3043ea",
+   "id": "90b3832e",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310c5209",
+   "id": "54ef998a",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -818,7 +818,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.733333,
+  "date": 1713141904.6016188,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
