--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "969d5fc3",
+   "id": "0ee8a238",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2481a051",
+   "id": "5b7bebb8",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7435fad3",
+   "id": "1b0b0769",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d081f882",
+   "id": "75e4434c",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790d82bf",
+   "id": "6977a63c",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,19 +65,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dadd6bbd",
+   "id": "7d877b7b",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
     "\n",
     "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
     "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)\n",
-    "- [The Hopenhayn Entry-Exit Model](https://jax.quantecon.org/hopenhayn.html)"
+    "- [The Hopenhayn Entry-Exit Model](https://jax.quantecon.org/hopenhayn.html)\n",
+    "- [Bianchi Overborrowing Model](https://jax.quantecon.org/overborrowing.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15e7519f",
+   "id": "e3134248",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c46126",
+   "id": "eeb923d2",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -99,7 +100,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.7525036,
+  "date": 1713141904.620055,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
