--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5700a2d8",
+   "id": "29179172",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f404553",
+   "id": "8ea219f6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e751e43",
+   "id": "b5ed835d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cd93f5b",
+   "id": "e88aee70",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81dae3c",
+   "id": "794a8472",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f0713a",
+   "id": "facc00de",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d7fe1d",
+   "id": "5e5473dc",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c62efb03",
+   "id": "decfa231",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0977e74",
+   "id": "672f2e01",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6231ac99",
+   "id": "b9c27a89",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b261c1",
+   "id": "9d1fc293",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e04a846",
+   "id": "05cbb831",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5630753a",
+   "id": "1e9476fa",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d8835a",
+   "id": "d6dfbbd6",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddcb162d",
+   "id": "f82fad9e",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2890f7cf",
+   "id": "76067356",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74e72beb",
+   "id": "e77ade51",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac8ca5b8",
+   "id": "b3506975",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a7940a0",
+   "id": "e523a03b",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112288c8",
+   "id": "ed9174ce",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828fc3b6",
+   "id": "1f7deb83",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81646ba5",
+   "id": "d3fbac2a",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c721e02b",
+   "id": "279115e8",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e2f8b0",
+   "id": "fc73a70d",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3185c981",
+   "id": "630fa9e8",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9d0577",
+   "id": "f5a439bd",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f4194e",
+   "id": "a964c90e",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8699b94",
+   "id": "034ddbe6",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6865821e",
+   "id": "e6cae11b",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa6bb1e",
+   "id": "59e53253",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc887510",
+   "id": "d6d025e0",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9d5759",
+   "id": "ff73f04c",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c399156b",
+   "id": "9947eea0",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af6cdc9",
+   "id": "7492edbd",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779731d3",
+   "id": "e601d70f",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ec9f736",
+   "id": "ee166c02",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cdf701f",
+   "id": "22a3d847",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa6647f",
+   "id": "496d73e9",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "029c1834",
+   "id": "3d9ccae8",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f862564c",
+   "id": "2b27b250",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5541a47",
+   "id": "aa7ece17",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1650268",
+   "id": "2089c90a",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e47dccf",
+   "id": "14f5da62",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed37d0f6",
+   "id": "80982382",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ef33c24",
+   "id": "adfea6b7",
    "metadata": {},
    "source": [
     "### Exercise 4.1\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26028f6",
+   "id": "a543f2ed",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 4.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8a321b",
+   "id": "969535f8",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc5a860",
+   "id": "de23d01b",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b79222",
+   "id": "dfb28fe7",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.7866116,
+  "date": 1713141904.653948,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
