--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c2016073",
+   "id": "ce6f1117",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5049bf1",
+   "id": "fa135ee4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ae8e3f",
+   "id": "5ddf694c",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2bae04",
+   "id": "19af1a2f",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c12484c",
+   "id": "f9e38467",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c81bfb",
+   "id": "453328f9",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098d8fce",
+   "id": "3aed15ef",
    "metadata": {
     "hide-output": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adcbf621",
+   "id": "6715e6dc",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the namedtuple."
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdcab492",
+   "id": "a71e53b6",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e55bd1c",
+   "id": "2b0c1ae0",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b1e6d2",
+   "id": "42cbc688",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0d9b9b",
+   "id": "0722b77e",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93545432",
+   "id": "c4923f4b",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36049d63",
+   "id": "29827efc",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0caf2f4c",
+   "id": "c455f04e",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b04d4b",
+   "id": "6a4a0614",
    "metadata": {},
    "source": [
     "### Computing the solution\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719af119",
+   "id": "785879e5",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2891c83",
+   "id": "4aebcac7",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d640d76",
+   "id": "271c3e0b",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8951b363",
+   "id": "d7f2bec3",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5496a9",
+   "id": "f8dae24d",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c68d08",
+   "id": "ffad3e7f",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10fc457b",
+   "id": "baf7975e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#job_search_1)"
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a6c3fe",
+   "id": "792576a5",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb8af0c",
+   "id": "e7985763",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093b54e7",
+   "id": "1b06512d",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6e048e1",
+   "id": "1c42d328",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -504,7 +504,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.931218,
+  "date": 1713141904.9537296,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
