--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4146c547",
+   "id": "01814a2f",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830ba45a",
+   "id": "c599a978",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dbee9ab",
+   "id": "28ac86a7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30608691",
+   "id": "9096ecff",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0158a29d",
+   "id": "610ee720",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba3f8cb4",
+   "id": "8b820f60",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be3d41af",
+   "id": "e87bef83",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08463ef1",
+   "id": "5105c40a",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96017674",
+   "id": "fd16e257",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e835b6e",
+   "id": "321b97a1",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90312d91",
+   "id": "4ba76ed7",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5c13a7",
+   "id": "52610a19",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d15d4177",
+   "id": "7b9d5ff9",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88aa69bf",
+   "id": "85df04bf",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e43a044",
+   "id": "eaf7e5c7",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c62ec22",
+   "id": "2b0c2152",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f1f2a8",
+   "id": "1e38f859",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55bd7513",
+   "id": "ba98e5c0",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e9e5c3",
+   "id": "a735fffc",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4eb5f12",
+   "id": "a5ad0ce6",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8f6c88",
+   "id": "6e4b205a",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(8.15)](#equation-eq-ntecxdk).\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0709171",
+   "id": "f16de03b",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db27b94",
+   "id": "7a3ae32f",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffe3ac7",
+   "id": "2a17c2fc",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecfd47c4",
+   "id": "f51e7db2",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b44379e",
+   "id": "44abdaf7",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a6c1bc",
+   "id": "22983cc0",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da6d9dde",
+   "id": "1cc4afd0",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82b3112",
+   "id": "978aae61",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d610b98",
+   "id": "ccfa15c0",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ff4523f",
+   "id": "20c87b12",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09fa044",
+   "id": "3cad072d",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f07ec2e",
+   "id": "bd004915",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67af9dcc",
+   "id": "f0fa3cab",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc34c45",
+   "id": "156eac30",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e20f46c",
+   "id": "2619251d",
    "metadata": {
     "hide-output": false
    },
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b62039ea",
+   "id": "1641c658",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c282ff24",
+   "id": "1965893f",
    "metadata": {
     "hide-output": false
    },
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91f3c049",
+   "id": "8d4404c8",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f167a37d",
+   "id": "632e8896",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7783b2fa",
+   "id": "036ffcd0",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437115df",
+   "id": "ba7636f5",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1eb96b3",
+   "id": "b5b1e57d",
    "metadata": {
     "hide-output": false
    },
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e5b598",
+   "id": "66be217e",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c52c72c",
+   "id": "2c2dfd24",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e216863",
+   "id": "9ab11ab6",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48fb6707",
+   "id": "206ccb2b",
    "metadata": {
     "hide-output": false
    },
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915916fc",
+   "id": "f05b3e22",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b32a81f",
+   "id": "95c18e30",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b925fe",
+   "id": "3cb374f9",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b38462b",
+   "id": "73e39ec1",
    "metadata": {
     "hide-output": false
    },
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74691a29",
+   "id": "5f35e7a8",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ddba22",
+   "id": "3214a77a",
    "metadata": {
     "hide-output": false
    },
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2677db",
+   "id": "b7e40155",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f56d69",
+   "id": "4c7cfe1a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c3f5624",
+   "id": "fc40ce94",
    "metadata": {
     "hide-output": false
    },
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a57f4f79",
+   "id": "070eb6a7",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3db1eb0a",
+   "id": "f140d6f7",
    "metadata": {
     "hide-output": false
    },
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6e1a7d",
+   "id": "2d687b3f",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f422d2",
+   "id": "526169d4",
    "metadata": {
     "hide-output": false
    },
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9669b008",
+   "id": "56880668",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9235d1f",
+   "id": "a889e3bf",
    "metadata": {
     "hide-output": false
    },
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ed3c85",
+   "id": "5e4e1ebf",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940da156",
+   "id": "3ddd9e91",
    "metadata": {
     "hide-output": false
    },
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5dbdaee",
+   "id": "823143c9",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a4daad",
+   "id": "74b36874",
    "metadata": {
     "hide-output": false
    },
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2108af",
+   "id": "d118c781",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c3600c2",
+   "id": "d1e0178a",
    "metadata": {
     "hide-output": false
    },
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5ed6e4",
+   "id": "e47d0cf7",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1d387d",
+   "id": "d6c96baa",
    "metadata": {
     "hide-output": false
    },
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9670a670",
+   "id": "ad4462e4",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdbdf2c",
+   "id": "7fa244f2",
    "metadata": {
     "hide-output": false
    },
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bfc6482",
+   "id": "eaf31150",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a2a9f5",
+   "id": "da9a888a",
    "metadata": {
     "hide-output": false
    },
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b35befb2",
+   "id": "760e8216",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce606aa",
+   "id": "417840aa",
    "metadata": {
     "hide-output": false
    },
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee71d0c",
+   "id": "3d514601",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e545dffa",
+   "id": "d739b581",
    "metadata": {
     "hide-output": false
    },
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fce038c",
+   "id": "af78f077",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1614,7 +1614,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255421.223135,
+  "date": 1713141905.1056428,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
