--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c5390e0",
+   "id": "523f1977",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fd99c5",
+   "id": "6979959b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "963e943f",
+   "id": "68154eb8",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f616fb4",
+   "id": "f2432db1",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6d5efb",
+   "id": "bd2a85b5",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7445b96b",
+   "id": "79b1ca4a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffba65eb",
+   "id": "5240de4d",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e391b2d",
+   "id": "5ec96248",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc500e0b",
+   "id": "78c1a394",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e5e1a6",
+   "id": "b65ec262",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4c6240",
+   "id": "e86dd999",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3aba9a6",
+   "id": "32421fff",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d62da5",
+   "id": "552e5b12",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c76651",
+   "id": "fcaa1f0f",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe3fa53a",
+   "id": "2e522df5",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307a0bf0",
+   "id": "e31876e5",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e44193a5",
+   "id": "aebacfd7",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "538ce129",
+   "id": "5924924c",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03ee6c4",
+   "id": "f7335066",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f6af82",
+   "id": "4edc9281",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72796088",
+   "id": "fb93daf8",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96743dc",
+   "id": "0c3db2c4",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aabf2429",
+   "id": "f562076f",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d9e3dc",
+   "id": "e76e9457",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0830b577",
+   "id": "90eb75fe",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a78b9d6a",
+   "id": "c4d84f34",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d7add7",
+   "id": "7f84ad8d",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64c7d50",
+   "id": "52be3f9e",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cac0048",
+   "id": "ae8fe64f",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c2d60e",
+   "id": "2ab5dbf0",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0863206b",
+   "id": "8980808e",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905fc19d",
+   "id": "f1fd2df8",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0daebf70",
+   "id": "1b10d0e1",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02421778",
+   "id": "ad84f776",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6f6ddb",
+   "id": "a267bd6d",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad94952e",
+   "id": "e264bec5",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0386251d",
+   "id": "f1ae77d9",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac9063e",
+   "id": "9a2fc422",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e6930b",
+   "id": "0f626003",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6507d357",
+   "id": "267683df",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02de4f63",
+   "id": "3fa5290d",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89279b56",
+   "id": "b81de3d8",
    "metadata": {
     "hide-output": false
    },
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fb79e8",
+   "id": "699ed990",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbb40bb",
+   "id": "223c594e",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e45ee8f3",
+   "id": "eb2d37ec",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2e618f",
+   "id": "85eddb2b",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a41647",
+   "id": "a6da2dff",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3eacd44",
+   "id": "7a21afa7",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce21031b",
+   "id": "582754f5",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953f963c",
+   "id": "984da188",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15905333",
+   "id": "76c600fb",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef0c48b",
+   "id": "bdebc7e5",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473d372c",
+   "id": "98376623",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +909,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255421.336966,
+  "date": 1713141905.2168424,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
