--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f6a291b",
+   "id": "162198ed",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee397f7",
+   "id": "15d488e5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20559370",
+   "id": "6e777d8c",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b179653b",
+   "id": "205d3140",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7a9f61",
+   "id": "7c52f9d5",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39e5534",
+   "id": "4289e3bb",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bc389ff",
+   "id": "9ad7f643",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de169a26",
+   "id": "615cf4ea",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a6c8a2",
+   "id": "bc0fa996",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f1fcb4",
+   "id": "f1e2d8d4",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6371c9b2",
+   "id": "03f73445",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4844ca2e",
+   "id": "adeafc19",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6332f485",
+   "id": "ae4c8274",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceea2a7f",
+   "id": "029ab298",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f94025b",
+   "id": "b82a8887",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334ef495",
+   "id": "f6bd4847",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a49edaa2",
+   "id": "9cf1072e",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fef9f4d",
+   "id": "1f7bd7a4",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01f35de",
+   "id": "4d54db1e",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4afebaab",
+   "id": "a2873f7d",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db875d4f",
+   "id": "b71f559c",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a0db692",
+   "id": "3eff543b",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e6e894",
+   "id": "ac7ef14d",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "464bd0d5",
+   "id": "ae892ccd",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e7b74f",
+   "id": "abff94da",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa3de4e",
+   "id": "68bb1d8f",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67fa177f",
+   "id": "18b30c4e",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7518bf",
+   "id": "18c4b0f4",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2c4514b",
+   "id": "03ae2d92",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365f1a48",
+   "id": "8f293a4d",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb095a96",
+   "id": "4c333f27",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab59cb03",
+   "id": "52a160df",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f07ed05b",
+   "id": "1e695c01",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a3937af",
+   "id": "68a1758e",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da3bca7",
+   "id": "08ad0ffb",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a807fc6d",
+   "id": "68af77d9",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c507fb36",
+   "id": "54d98707",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "504735bf",
+   "id": "4f0c6e28",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17251c3e",
+   "id": "72401a1c",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe6598c",
+   "id": "ed24b427",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76748b39",
+   "id": "0e7bb0c0",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d318024e",
+   "id": "2cc843f6",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df45088b",
+   "id": "facce89a",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77526fc",
+   "id": "f398e1b5",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7482679e",
+   "id": "fe3374dc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b4fea6",
+   "id": "41a36b6a",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cff7d9d1",
+   "id": "743d65a3",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Are08](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c394283a",
+   "id": "2487e66e",
    "metadata": {
     "hide-output": false
    },
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc07f35d",
+   "id": "b806f9f4",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bccaade",
+   "id": "726dfc32",
    "metadata": {
     "hide-output": false
    },
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b9c4bf",
+   "id": "ce36fe62",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce88e087",
+   "id": "73cea6c8",
    "metadata": {
     "hide-output": false
    },
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a0dcc7f",
+   "id": "3667a3cd",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ee6841",
+   "id": "5b953190",
    "metadata": {
     "hide-output": false
    },
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff40925",
+   "id": "c99798eb",
    "metadata": {
     "hide-output": false
    },
@@ -1254,7 +1254,7 @@
   }
  ],
  "metadata": {
-  "date": 1712255420.5965874,
+  "date": 1713141904.465652,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
